--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>slms4redd.documentation by slms4redd</title>
+    <title>slms4redd documentation by slms4redd</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -11,8 +11,8 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">slms4redd.documentation</h1>
-      <h2 class="project-tagline">documentation fao unredd nfms slms landcover landusage forestry remote sensing</h2>
+      <h1 class="project-name">slms4redd</h1>
+      <h2 class="project-tagline">documentation website</h2>
     </section>
 
     <section class="main-content">
