--- a/index.html
+++ b/index.html
@@ -17,9 +17,18 @@
 
     <section class="main-content">
       <h3>
-<a id="welcome-to-the-slms-documentation-homepage-work-in-progress" class="anchor" href="#welcome-to-the-slms-documentation-homepage-work-in-progress" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to the SLMS documentation Homepage [WORK IN PROGRESS]</h3>
+<a id="welcome-to-the-slms-documentation-homepage" class="anchor" href="#welcome-to-the-slms-documentation-homepage-work-in-progress" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to the SLMS documentation Homepage!</h3>
 
-<p>This page represents the entry point for the online resources of the SLMS platform</p>
+<p>This page is the entry point for the online resources of the SLMS platform</p>
+
+<h3>
+<a id="SLMS-Official-Documentation" class="anchor" href="#SLMS-Official-Documentation" aria-hidden="true"><span class="octicon octicon-link"></span></a>The SLMS Official documentation</h3>
+
+<p>This is the training documentation to become a SLMS platform system administrator</p>
+
+<p><a href="http://slms4redd.github.io/doc/html/">Open the Table Of Context</a></p>
+
+<p>A basic knowledge of Linux and the GIS world (most common data formats and OGC protocols) are required.</p>
 
       <footer class="site-footer">
 
