--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 
 <p>
   This page is the entry point for the online resources of the SLMS platform...
+</p>
+<p>
   Do you need a quick overview of our platform? watch <a href="https://docs.google.com/presentation/d/1Mf4h_fuZIHEpco3yEDTyzMB-OdwcQ9-xPoz8K2bKsi8/edit#slide=id.g3e0122fd8_21">this presentation</a>
 </p>
 
@@ -30,27 +32,27 @@
 <p>This is the training documentation for the SLMS platform system administrator</p>
 
 <ul>
-  <li></li><a href="http://slms4redd.github.io/doc/html/tutorial/index.html">The tutorial</a> A tutorial which introduce the user in the administration of the system using a local VM</li>
-  <li></li><a href="http://slms4redd.github.io/doc/html/index.html">The Table Of Context</a> Browse all the documentation</li>
+  <li><a href="http://slms4redd.github.io/doc/html/tutorial/index.html">The tutorial</a> a tutorial which introduce the user in the administration of the system using a local VM</li>
+  <li><a href="http://slms4redd.github.io/doc/html/index.html">The Table Of Context</a> browse all the documentation</li>
 </ul>
 
 Here are listed all the subsection of the main SLMS platform components:
 
 <ul>
-  <li></li><a href="http://slms4redd.github.io/doc/html/geoserver/index.html">Geoserver</a> the geospatial backend used to disseminate the data through the OGC protocols</li>
-  <li></li><a href="http://slms4redd.github.io/doc/html/geobatch/index.html">Geobatch</a> a geospatial oriented batch ingestion system</li>
-  <li></li><a href="http://slms4redd.github.io/doc/html/geostore/index.html">Geostore</a> a storage + a REST interface used to store configurations and statistics</li>
-  <li></li><a href="http://slms4redd.github.io/doc/html/admin/index.html">Admin UI</a> a WebApp to facilitate the admin in the data management</li>
-  <li></li><a href="http://slms4redd.github.io/doc/html/portal/index.html">Portal UI v1.0</a> What the end-user only see :)</li>
+  <li><a href="http://slms4redd.github.io/doc/html/geoserver/index.html">Geoserver</a> the geospatial backend used to disseminate the data through the OGC protocols</li>
+  <li><a href="http://slms4redd.github.io/doc/html/geobatch/index.html">Geobatch</a> a geospatial oriented batch ingestion system</li>
+  <li><a href="http://slms4redd.github.io/doc/html/geostore/index.html">Geostore</a> a storage + a REST interface used to store configurations and statistics</li>
+  <li><a href="http://slms4redd.github.io/doc/html/admin/index.html">Admin UI</a> a WebApp to facilitate the admin in the data management</li>
+  <li><a href="http://slms4redd.github.io/doc/html/portal/index.html">Portal UI v1.0</a> what the end-user only see :)</li>
 </ul>
 
 <p>A basic knowledge of Linux and the GIS world (most common data formats and OGC protocols) are required.</p>
 
 <h3><a id="SLMS-dev-Documentation" class="anchor" href="#SLMS-dev-Documentation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Some useful SLMS developer resources</h3>
 <ul>
-  <li></li><a href="https://github.com/slms4redd">Our github organization page</a></li>
-  <li></li><a href="https://github.com/slms4redd/utils/wiki#module-appstats"> an overview of the SLMS statistic system</a></li>
-  <li></li><a href="https://github.com/slms4redd/chef-slms-portal/wiki">Resources about the chef cookbook</a></li>
+  <li><a href="https://github.com/slms4redd">Our github organization page</a></li>
+  <li><a href="https://github.com/slms4redd/utils/wiki#module-appstats"> an overview of the SLMS statistic system</a></li>
+  <li><a href="https://github.com/slms4redd/chef-slms-portal/wiki">Resources about the chef cookbook</a></li>
 </ul>
 
 
