--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <ul>
   <li><a href="http://slms4redd.github.io/doc/html/tutorial/index.html">The tutorial</a> a tutorial which introduce the user in the administration of the system using a local VM</li>
-  <li><a href="http://slms4redd.github.io/doc/html/index.html">The Table Of Context</a> browse all the documentation</li>
+  <li><a href="http://slms4redd.github.io/doc/html/index.html">The Table Of Content</a> browse all the documentation</li>
 </ul>
 
 Here are listed all the subsection of the main SLMS platform components:
