--- a/index.html
+++ b/index.html
@@ -20,20 +20,20 @@
 <a id="welcome-to-the-slms-documentation-homepage" class="anchor" href="#welcome-to-the-slms-documentation-homepage-work-in-progress" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to the SLMS documentation Homepage!</h3>
 
 <p>
-  This page is the entry point for the online resources of the SLMS platform...
+  This page is the entry point to the online resources of the SLMS platform...
 </p>
 <p>
-  Do you need a quick overview of our platform? watch <a href="https://docs.google.com/presentation/d/1Mf4h_fuZIHEpco3yEDTyzMB-OdwcQ9-xPoz8K2bKsi8/edit#slide=id.g3e0122fd8_21">this presentation</a>
+  Do you need a quick overview of our platform? Watch <a href="https://docs.google.com/presentation/d/1Mf4h_fuZIHEpco3yEDTyzMB-OdwcQ9-xPoz8K2bKsi8/edit#slide=id.g3e0122fd8_21">this presentation</a>
 </p>
 
 <h3>
 <a id="SLMS-Official-Documentation" class="anchor" href="#SLMS-Official-Documentation" aria-hidden="true"><span class="octicon octicon-link"></span></a>The SLMS Official documentation</h3>
 
-<p>This is the training documentation for the SLMS platform system administrator</p>
+<p>This is the complete documentation for the SLMS platform system administrators</p>
 
 <ul>
-  <li><a href="http://slms4redd.github.io/doc/html/tutorial/index.html">The tutorial</a> a tutorial which introduce the user in the administration of the system using a local VM</li>
-  <li><a href="http://slms4redd.github.io/doc/html/index.html">The Table Of Content</a> browse all the documentation</li>
+  <li><a href="http://slms4redd.github.io/doc/html/index.html">Table Of Content</a> browse all the documentation</li>
+  <li><a href="http://slms4redd.github.io/doc/html/tutorial/index.html">This tutorial</a> is an introduction to the system administration of the portal. In order to do the exercises you'll have to download this <a>virtual machine</a></a></li>
 </ul>
 
 Here are listed all the subsection of the main SLMS platform components:
@@ -42,11 +42,11 @@ Here are listed all the subsection of the main SLMS platform components:
   <li><a href="http://slms4redd.github.io/doc/html/geoserver/index.html">Geoserver</a> the geospatial backend used to disseminate the data through the OGC protocols</li>
   <li><a href="http://slms4redd.github.io/doc/html/geobatch/index.html">Geobatch</a> a geospatial oriented batch ingestion system</li>
   <li><a href="http://slms4redd.github.io/doc/html/geostore/index.html">Geostore</a> a storage + a REST interface used to store configurations and statistics</li>
-  <li><a href="http://slms4redd.github.io/doc/html/admin/index.html">Admin UI</a> a WebApp to facilitate the admin in the data management</li>
+  <li><a href="http://slms4redd.github.io/doc/html/admin/index.html">Admin UI</a> a WebApp to help the admin in the data management</li>
   <li><a href="http://slms4redd.github.io/doc/html/portal/index.html">Portal UI v1.0</a> what the end-user only see :)</li>
 </ul>
 
-<p>A basic knowledge of Linux and the GIS world (most common data formats and OGC protocols) are required.</p>
+<p>A basic knowledge of Linux and the GIS world (most common data formats and OGC protocols) is required.</p>
 
 <h3><a id="SLMS-dev-Documentation" class="anchor" href="#SLMS-dev-Documentation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Some useful SLMS developer resources</h3>
 <ul>
