--- a/index.html
+++ b/index.html
@@ -1,62 +1,68 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en-us">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Concept notes by slms4redd</title>
-
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
-    <meta name="viewport" content="width=device-width">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <meta charset="UTF-8">
+    <title>slms4redd documentation by slms4redd</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
   </head>
   <body>
-    <div class="wrapper">
-      <header>
-        <h1>Concept notes</h1>
-        <p>General guidelines for the portal GUI design</p>
+    <section class="page-header">
+      <h1 class="project-name">slms4redd</h1>
+      <h2 class="project-tagline">documentation website</h2>
+    </section>
 
+    <section class="main-content">
+      <h3>
+<a id="welcome-to-the-slms-documentation-homepage" class="anchor" href="#welcome-to-the-slms-documentation-homepage-work-in-progress" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to the SLMS documentation Homepage!</h3>
 
-        <p class="view"><a href="https://github.com/slms4redd">View My GitHub Profile</a></p>
+<p>
+  This page is the entry point to the online resources of the SLMS platform...
+</p>
+<p>
+  Do you need a quick overview of our platform? Watch <a href="https://docs.google.com/presentation/d/1Mf4h_fuZIHEpco3yEDTyzMB-OdwcQ9-xPoz8K2bKsi8/edit#slide=id.g3e0122fd8_21">this presentation</a>
+</p>
 
-      </header>
-      <section>
-        <p>The information contained in this page are standard guidelines for a UNREDD Portal. Every portal that will be built within the UNREDD Initiative has to consider them at making layout and graphics related decisions.</p>
+<h3>
+<a id="SLMS-Official-Documentation" class="anchor" href="#SLMS-Official-Documentation" aria-hidden="true"><span class="octicon octicon-link"></span></a>The SLMS Official documentation</h3>
 
-<p>Customers' related requirements have to be considered, discussed with the team and documented in order to keep track of the reasons.</p>
-
-<p>A Portal <strong>can</strong> have:</p>
-
-<ul>
-<li>an introductory pop up that can be used to introduce the country, the National UNREDD or REDD+ project related initiatives or other related activities already under going in the country;</li>
-<li>information buttons whether required to present additional information about the various data and features available on the portal.</li>
-</ul>
-
-<p>A Portal <strong>has</strong> to have:</p>
+<p>This is the complete documentation for the SLMS platform system administrators</p>
 
 <ul>
-<li>a header made of a banner aimed to host national flag, logos / flags of local authorities involved in the initiative, UNREDD logo;</li>
-<li>a footer for providing national or project information as well as utilities to be used by the end users - e.g. SLMS mailing list to post a question or get answers from others;</li>
-<li>a toolbar to be used to host the languages selection buttons, the feedback facility, the time series slider for showing time related changes to the selected layers;</li>
-<li>a legend section to make it easier the analyses of the selected layers;</li>
-<li>a section to show the available layers, activate or deactivate them;</li>
-<li>zoom in and out buttons;</li>
-<li>One transparency slider for each layer</li>
+  <li><a href="http://slms4redd.github.io/doc/html/index.html">Table Of Content</a> browse all the documentation</li>
+  <li><a href="http://slms4redd.github.io/doc/html/tutorial/index.html">This tutorial</a> is an introduction to the system administration of the portal. In order to do the exercises you'll have to download this <a>virtual machine</a></a></li>
 </ul>
 
-<p>Best practices:</p>
+Here are listed all the subsection of the main SLMS platform components:
 
 <ul>
-<li>layers with a simple legend (only one symbol, i.e. country boundaries) should have a small legend next to the layer label</li>
+  <li><a href="http://slms4redd.github.io/doc/html/geoserver/index.html">Geoserver</a> the geospatial backend used to disseminate the data through the OGC protocols</li>
+  <li><a href="http://slms4redd.github.io/doc/html/geobatch/index.html">Geobatch</a> a geospatial oriented batch ingestion system</li>
+  <li><a href="http://slms4redd.github.io/doc/html/geostore/index.html">Geostore</a> a storage + a REST interface used to store configurations and statistics</li>
+  <li><a href="http://slms4redd.github.io/doc/html/admin/index.html">Admin UI</a> a WebApp to help the admin in the data management</li>
+  <li><a href="http://slms4redd.github.io/doc/html/portal/index.html">Portal UI v1.0</a> what the end-user only see :)</li>
 </ul>
-      </section>
-      <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+
+<p>A basic knowledge of Linux and the GIS world (most common data formats and OGC protocols) is required.</p>
+
+<h3><a id="SLMS-dev-Documentation" class="anchor" href="#SLMS-dev-Documentation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Some useful SLMS developer resources</h3>
+<ul>
+  <li><a href="https://github.com/slms4redd">Our github organization page</a></li>
+  <li><a href="https://github.com/slms4redd/utils/wiki#module-appstats"> an overview of the SLMS statistic system</a></li>
+  <li><a href="https://github.com/slms4redd/chef-slms-portal/wiki">Resources about the chef cookbook</a></li>
+</ul>
+
+
+      <footer class="site-footer">
+
+        <span class="site-footer-credits">Hosted by Github Pages. Credits SLMS team @ FAO hq - Rome</span>
       </footer>
-    </div>
-    <script src="javascripts/scale.fix.js"></script>
-    
+
+    </section>
+
+  
   </body>
 </html>
