--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@ Here are listed all the subsection of the main SLMS platform components:
 <ul>
   <li><a href="https://github.com/slms4redd">Our github organization page</a></li>
   <li><a href="https://github.com/slms4redd/utils/wiki#module-appstats"> an overview of the SLMS statistic system</a></li>
+  <li><a href="https://github.com/slms4redd/slms4redd.github.io/wiki/Concept-notes---GUI-design-guidelines">GUI design guidelines</a></li>
   <li><a href="https://github.com/slms4redd/chef-slms-portal/wiki">Resources about the chef cookbook</a></li>
+  <li><a href="https://github.com/slms4redd/slms4redd.github.io/wiki/Server-administration---deployment-of-a-new-VM">How to deploy a new VM</a></li>
 </ul>
 
 
