--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
-                                <img id ="SLMS_training_img" src="D:\work\code\slms4redd.github.io\img\SLMS_training.png"  style="position:absolute;left:-60px;" width="270px" height="110px"  />
+                                <img id ="SLMS_training_img" src="img\SLMS_training.png"  style="position:absolute;left:-60px;" width="270px" height="110px"  />
                                 <!--i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-cloud fa-stack-1x text-primary"></i-->
                             </span>
@@ -114,7 +114,7 @@
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
-                                <img id ="SLMS-Ubuntu-desktop_img" src="D:\work\code\slms4redd.github.io\img\SLMS-Ubuntu-desktop.png" style="position:absolute;left:-40px;" width="250px" height="105px" />
+                                <img id ="SLMS-Ubuntu-desktop_img" src="img\SLMS-Ubuntu-desktop.png" style="position:absolute;left:-40px;" width="250px" height="105px" />
                                 <!--i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-compass fa-stack-1x text-primary"></i-->
                             </span>
@@ -130,7 +130,7 @@
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
-                                <img id ="SLMS-Ubuntu-server_img" src="D:\work\code\slms4redd.github.io\img\SLMS-Ubuntu-server.png" style="position:absolute;left:-40px;" width="250px" height="105px" />
+                                <img id ="SLMS-Ubuntu-server_img" src="img\SLMS-Ubuntu-server.png" style="position:absolute;left:-40px;" width="250px" height="105px" />
                                 <!--i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-flask fa-stack-1x text-primary"></i-->
                             </span>
@@ -146,7 +146,7 @@
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                             <span class="fa-stack fa-4x">
-                                <img id ="SLMS_cookbook_img" src="D:\work\code\slms4redd.github.io\img\SLMS_cookbook.png"  style="position:absolute;left:-30px;" width="200px" height="75px" />
+                                <img id ="SLMS_cookbook_img" src="img\SLMS_cookbook.png"  style="position:absolute;left:-30px;" width="200px" height="75px" />
                                 <!--i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-shield fa-stack-1x text-primary"></i-->
                             </span>
@@ -160,7 +160,7 @@
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                             <span class="fa-stack fa-4x">
-                                <img id ="SLMS-hypervisor1_img" src="D:\work\code\slms4redd.github.io\img\SLMS-hypervisor.png" style="position:absolute;left:-70px;" width="320px" height="125px" />
+                                <img id ="SLMS-hypervisor1_img" src="img\SLMS-hypervisor.png" style="position:absolute;left:-70px;" width="320px" height="125px" />
                                 <!--i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-shield fa-stack-1x text-primary"></i-->
                             </span>
